samples/_failures_safe/1761661599_ea5e61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39a118b9.c: In function ‘print_dijkstra’:
./samples/SAFE/__tmp_39a118b9.c:138:1: error: expected declaration or statement at end of input
  138 | void print_dijkstra(Graph *g, int start, int target) {
      | ^~~~
